<resources>
    <string name="app_name">Firebase Storage</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="order_by">Ordenar por...</string>
    <string name="order_by_scores">puntuaciones</string>
    <string name="most">2 Más altos</string>
    <string name="less">2 Más ligeros</string>
    <string name="dinoRef">dinosaurios</string>

    <string name="hight">altura</string>
    <string name="weight">peso</string>
    <string name="length">longitud</string>
    <string name="name">nombre</string>
    <string name="appear">aparecido</string>
    <string name="disappear">desaparecido</string>
    <string name="order">orden</string>
    <string name="score">Puntuacion</string>

    <string name="between">[1-9]</string>
    <string name="more_short">Más peq. ERROR</string>
    <string name="register">Registro de Dinosaurios</string>
    <string name="Back">Volver</string>
    <string name="send">Registrar</string>
    <string name="empty"></string>

    <string-array name="atributos">
        <item>nombre</item>
        <item>altura</item>
        <item>aparecido</item>
        <item>desaparecido</item>
        <item>longitud</item>
        <item>orden</item>
        <item>peso</item>
    </string-array>

    <string name="title_activity_dino_register">DinoRegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="usermail">User Mail</string>
    <string name="password">Password</string>
    <string name="login">Log-in</string>
    <string name="signin">Sign-in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
</resources>
