<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.gonzalo.firebasestorage.LoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/usermail"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/usermail"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/usermail"
        android:layout_centerHorizontal="true"
        android:hint="@string/password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_button"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:onClick="login" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:id="@+id/signin_button"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:onClick="signin" />

</RelativeLayout>
